--- a/DGToolkit/DGToolkit.csproj
+++ b/DGToolkit/DGToolkit.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="ShowMeTheXAML.MSBuild" Version="2.0.0" />
         <PackageReference Include="Xabe.FFmpeg" Version="5.2.0" />
+        <PackageReference Include="Xabe.FFmpeg.Downloader" Version="5.2.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -45,12 +46,21 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Data\ffmpeg.exe">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
-      <None Update="Data\ffprobe.exe">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
+        <Content Include="Data\**\*.*">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Views\AudioOcclusion" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="Views\AudioPack\AudioPackView.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
     </ItemGroup>
 
 
