--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-﻿image: mcr.microsoft.com/dotnet/sdk:6.0
+image: mcr.microsoft.com/dotnet/sdk:6.0
 
 stages:
   - build
@@ -15,6 +15,8 @@ cache:
 
 build:
   stage: build
+  except: 
+    - tags
   script:
     - dotnet build
 
