--- a/DGToolkit/DGToolkit.csproj
+++ b/DGToolkit/DGToolkit.csproj
@@ -6,6 +6,8 @@
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
+        <ApplicationIcon>logo.ico</ApplicationIcon>
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
     </PropertyGroup>
 
     <ItemGroup>
